<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.firstscreen.FirstActivity">

    <ImageView
        android:id="@+id/iv_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="142dp"
        android:src="@drawable/ic_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="51dp"
        android:background="@drawable/rounded_edit_text"
        android:fontFamily="@font/poppins_regular"
        android:inputType="text"
        android:padding="16dp"
        android:hint="@string/name"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/iv_photo" />

    <EditText
        android:id="@+id/et_palindrome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_edit_text"
        android:fontFamily="@font/poppins_regular"
        android:inputType="text"
        android:padding="16dp"
        android:hint="@string/palindrome"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/et_name" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_check"
        android:layout_marginTop="45dp"
        android:layout_marginHorizontal="32dp"
        android:layout_width="match_parent"
        android:text="@string/check"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_regular"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        app:layout_constraintTop_toBottomOf="@+id/et_palindrome" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_next"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/white"
        android:background="@drawable/rounded_button"
        app:layout_constraintTop_toBottomOf="@+id/btn_check" />

</androidx.constraintlayout.widget.ConstraintLayout>